# discord_object_converter

./: Pipfile  README.md  app.json  example.py  main.py  setup.cfg
src/: channel.py
src/discord_object_converter/: __init__.py  abstract.py  guild.py  task.py
src/discord_object_converter/channels/: channel.py  getter.py
src/discord_object_converter/converters/: color.py  guild.py
src/discord_template_manage/converters/: permission.py  role.py  voice_region.py
src/discord_template_manage/converters/channels/: channel.py
tests/: conftest.py
tests/test_converters/: test_channel.py  test_guild.py  test_permission.py  test_role.py  test_voice_region.py
web/templates/: discord_oauth.html  github_oauth.html  index.html
