[metadata]
name = discord_object_converter
url = https://github.com/coolwind0202/discord_object_converter
version = attr: src.VERSION
description = discord.py の提供する Discord モデルやデータクラスを、人間にとって可読性の高い辞書に変換するライブラリです。

[options]
install_requires =
  discord.py

[options]
package_dir=
    =src
packages=find:

[options.packages.find]
where=src