[metadata]
name = discord_object_converter
url = https://github.com/coolwind0202/discord_object_converter
version = attr: discord_object_converter.__version__
description = the library converts a Discord model what was provided by discord.py to Python dict.


[options]
install_requires =
  discord.py
package_dir=
    =src
packages=find:

[options.packages.find]
where=src